--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,13 @@
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=sadmin
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=40MB
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
